--- a/Xela_api_pariss/Views/Usuarios/Contactos.cshtml
+++ b/Xela_api_pariss/Views/Usuarios/Contactos.cshtml
@@ -1,66 +1,9 @@
-﻿@model LoginViewModel
-@*@{
-    Layout = "_LayoutNuevo1";
-}
-
-<section id="contact" class="contact">
-    <div class="container">
-
-        <div class="section-title">
-            <h2>Bienvenidos</h2>
-        </div>
-
-        <div class="row justify-content-center">
-        </div>
-
-        <div class="row justify-content-center" style="padding-top:4%">
-            <div class="col-lg-4 col-sm-2">
-                <form class="form-group" style="padding-top: 0%" asp-action="Login">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="mb-3 col-12" style="opacity: 0.5">
-                        <label asp-for="Email" class="form-label"> </label>
-                        <input asp-for="Email" class="form-control" type="email" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                    </div>
-                    <div class="mb-3 col-12" style="opacity: 0.5">
-                        <label asp-for="Password" class="form-label"> </label>
-                        <input asp-for="Password" class="form-control" type="password" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                    </div>
-                    <div class="mb-3 col-12 form-check">
-                        <input asp-for="Recuerdame" class="form-check-input" type="checkbox" />
-                        <label asp-for="Recuerdame" class="form-check-label"></label>
-                    </div>
-                    <div class="text-center">
-                    <button class="btn btn-danger" type="submit">Ingresar</button>
-                    </div>
-                </form>
-
-
-                <div class="text-center">
-                </div>
-                <div class="text-center">
-                    <a asp-action="Registro" asp-controller="Usuarios" style="color:#fff">Registrarse</a><br><br>
-                    <a asp-action="PagePrincipal" asp-controller="Usuarios" style="color:#fff">Pagina Principal</a>
-                </div>
-                <div class="container" id='salidpassw'>
-                </div>
-            </div>
-
-        </div>
-
-    </div>
-</section><!-- End Contact Us Section -->*@
-
-
-
-
-
-@*@model LoginViewModel*@
+﻿@*@model LoginViewModel*@
 @{
     //Layout = "_LayoutNuevo1";
     Layout = null;
 }
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -101,7 +44,7 @@
     ======================================================== -->
 </head>
 
-<body class="page-index">
+<body class="page-contact">
 
     <!-- ======= Header ======= -->
     <header id="header" class="header d-flex align-items-center fixed-top">
@@ -119,72 +62,95 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a asp-action="PagePrincipal" asp-controller="Usuarios" class="active">Inicio</a></li>
+                   @* <li><a href="#Serviciosdiv" class="active">Servicios</a></li>
+                    <li><a href="#Visiondiv" class="active">Vision</a></li>*@
                     <li><a asp-action="Login" asp-controller="Usuarios">Iniciar Sesion</a></li>
-                    @*<li><a asp-action="ContactoInsert" asp-controller="Usuarios">Quiero Comunicarme!!</a></li>*@
+                   @* <li><a asp-action="Contact" asp-controller="Usuarios">Quiero Comunicarme!!</a></li>*@
                 </ul>
             </nav><!-- .navbar -->
+
         </div>
     </header><!-- End Header -->
-    <!-- ======= Hero Section ======= -->
-    <section id="hero" class="hero d-flex align-items-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-4" style="color:mintcream">
-                    <h3 data-aos="fade-up">Nuestro Lema</h3>
-                    <blockquote data-aos="fade-up" data-aos-delay="100">
-                        <p>Conectando Ideas, Creando Soluciones Web</p>
-                    </blockquote>
-                    <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-                        <a asp-action="Login" asp-controller="Usuarios" class="btn-get-started">Iniciar Sesion</a>
-                        <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+
+    <main id="main">
+
+        <!-- ======= Breadcrumbs ======= -->
+        <div class="breadcrumbs d-flex align-items-center imgcontact">
+            <div class="container position-relative d-flex flex-column align-items-center">
+
+                <h2>Contacto</h2>
+                <ol>
+                    <li><a <a asp-action="PagePrincipal" asp-controller="Usuarios">Inicio</a></li>
+                    <li>Contacto</li>
+                </ol>
+
+            </div>
+        </div><!-- End Breadcrumbs -->
+        <!-- ======= Contact Section ======= -->
+        <section id="contact" class="contact">
+            <div class="container position-relative" data-aos="fade-up">
+
+                <div class="row gy-4 d-flex justify-content-end">
+
+                    <div class="col-lg-5" data-aos="fade-up" data-aos-delay="100">
+
+                        <div class="info-item d-flex">
+                            <i class="bi bi-geo-alt flex-shrink-0"></i>
+                            <div>
+                                <h4>Localizacion:</h4>
+                                <p>Calle 101 Nro 5b-25 ; Bogota</p>
+                            </div>
+                        </div><!-- End Info Item -->
+
+                        <div class="info-item d-flex">
+                            <i class="bi bi-envelope flex-shrink-0"></i>
+                            <div>
+                                <h4>Email:</h4>
+                                <p>alexpill01@gmail.com</p>
+                            </div>
+                        </div><!-- End Info Item -->
+
+                        <div class="info-item d-flex">
+                            <i class="bi bi-phone flex-shrink-0"></i>
+                            <div>
+                                <h4>Contacto:</h4>
+                                <p>318 772 7030</p>
+                            </div>
+                        </div><!-- End Info Item -->
+
                     </div>
 
-                </div>
-                <div class="col-xl-8">
+                    <div class="col-lg-6" data-aos="fade-up" data-aos-delay="250">
 
-                    <div class="row justify-content-center" style="padding-top:0%;">
-                        <div class="col-lg-6 col-sm-2" style="color:bisque">
-                            <div class="section-title " style="color:bisque; padding-left: 30%">
-                                @*<h5>Bienvenidos</h5>*@
+                        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                            <div class="row">
+                                <div class="col-md-6 form-group">
+                                    <input type="text" name="name" class="form-control" id="name" placeholder="Nombres" required>
+                                </div>
+                                <div class="col-md-6 form-group mt-3 mt-md-0">
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
+                                </div>
                             </div>
-                        <form class="form-group" style="padding-top: 5%" asp-action="Login">
-                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                            <div class="mb-3 col-12" style="opacity: 0.5">
-                                <label asp-for="Email" class="form-label"> </label>
-                                <input asp-for="Email" class="form-control" type="email" />
-                                <span asp-validation-for="Email" class="text-danger"></span>
+                            <div class="form-group mt-3">
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Titulo" required>
                             </div>
-                            <div class="mb-3 col-12" style="opacity: 0.5">
-                                <label asp-for="Password" class="form-label"> </label>
-                                <input asp-for="Password" class="form-control" type="password" />
-                                <span asp-validation-for="Password" class="text-danger"></span>
+                            <div class="form-group mt-3">
+                                <textarea class="form-control" name="message" rows="5" placeholder="Mensaje" required></textarea>
                             </div>
-                            <div class="mb-3 col-12 form-check">
-                                <input asp-for="Recuerdame" class="form-check-input" type="checkbox" />
-                                <label asp-for="Recuerdame" class="form-check-label"></label>
+                            <div class="my-3">
+                                <div class="loading">Loading</div>
+                                <div class="error-message"></div>
+                                <div class="sent-message">Your message has been sent. Thank you!</div>
                             </div>
-                            <div class="text-center">
-                                <button class="btn btn-info" type="submit">Ingresar</button>
-                            </div>
+                            <div class="text-center"><button type="submit">Guardar Mensaje</button></div>
                         </form>
-                        </div>
-                    </div>
-                    <div class="text-center">
-                    </div>
-                    <div class="text-center">
-                        <br>  <a asp-action="Registro" asp-controller="Usuarios" style="color:#fff">Registrarse</a>
-                        @*<a asp-action="PagePrincipal" asp-controller="Usuarios" style="color:#fff">Pagina Principal</a>*@
-                    </div>
-                    <div class="container" id='salidpassw'>
-                    </div>
+
+                    </div><!-- End Contact Form -->
 
                 </div>
 
             </div>
-        </div>
-    </section><!-- End Hero Section -->
-
-    <main id="main">
+        </section><!-- End Contact Section -->
 
     </main><!-- End #main -->
     <!-- ======= Footer ======= -->
@@ -240,6 +206,7 @@
             </div>
         </div>
     </footer><!-- End Footer --><!-- End Footer -->
+
 
     <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
