--- a/Xela_api_pariss/Views/Usuarios/Contactos.cshtml
+++ b/Xela_api_pariss/Views/Usuarios/Contactos.cshtml
@@ -122,27 +122,29 @@
 
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="250">
 
-                        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                        <form action="Formcontact" method="post" role="form" class="php-email-form">
+                            <div asp-validation-summary="ModelOnly"></div>
+                            @Html.AntiForgeryToken()
                             <div class="row">
                                 <div class="col-md-6 form-group">
-                                    <input type="text" name="name" class="form-control" id="name" placeholder="Nombres" required>
+                                    <input type="text" name="name" class="form-control" id="Nombre" placeholder="Nombres" required>
                                 </div>
                                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
+                                    <input type="email" class="form-control" name="email" id="Email" placeholder="Email" required>
                                 </div>
                             </div>
                             <div class="form-group mt-3">
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Titulo" required>
+                                <input type="text" class="form-control" name="subject" id="Titulo" placeholder="Titulo" required>
                             </div>
                             <div class="form-group mt-3">
-                                <textarea class="form-control" name="message" rows="5" placeholder="Mensaje" required></textarea>
+                                <textarea class="form-control" name="message" id="Mensaje" rows="5" placeholder="Mensaje" required></textarea>
                             </div>
                             <div class="my-3">
                                 <div class="loading">Loading</div>
                                 <div class="error-message"></div>
                                 <div class="sent-message">Your message has been sent. Thank you!</div>
                             </div>
-                            <div class="text-center"><button type="submit">Guardar Mensaje</button></div>
+                            <div class="text-center"><button type="button" class="btninsertContact">Guardar Mensaje</button></div>
                         </form>
 
                     </div><!-- End Contact Form -->
@@ -176,6 +178,7 @@
                             <li><i class="bi bi-dash"></i><a asp-action="Login" asp-controller="Usuarios">Iniciar Sesion</a></li>
                             <li><i class="bi bi-dash"></i> <a href="#services-list">Services</a></li>
                             <li><i class="bi bi-dash"></i> <a href="#call-to-action">Vision</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#Proyectosdiv">Proyectos</a></li>
                             <li><i class="bi bi-dash"></i><a asp-action="Contactos" asp-controller="Usuarios">Quiero Comunicarme!!</a></li>
                         </ul>
                     </div>
@@ -213,15 +216,17 @@
     <div id="preloader"></div>
 
     <!-- Vendor JS Files -->
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/assets3/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="~/assets3/assets/vendor/aos/aos.js"></script>
     <script src="~/assets3/assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="~/assets3/assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="~/assets3/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="~/assets3/assets/vendor/php-email-form/validate.js"></script>
-
+    <script src="~/js/sweetalert2.js" asp-append-version="true"></script>
     <!-- Template Main JS File -->
     <script src="~/assets3/assets/js/main.js"></script>
+    <script src="~/js/siteConsultas.js"></script>
 
 </body>
 
